# nodejs-server-server-generated/service/ComprobacionService.js
@@ -18,9 +18,12 @@ exports.comprobarGET = function(cliente,seguro) {
       `;
 
       const querySeg = `
-      SELECT * FROM SEGURO WHERE ID = ?
+      SELECT ID FROM SEGURO WHERE ID = ? AND DNI_USUARIO = ?
       `;
 
+      console.log(cliente);
+      console.log(seguro);
+      
       db.query(queryCli, [cliente], (error, results) => {
         if (error) {
           console.error('Error al comprobar los datos de la reclamacion:', error);
@@ -35,25 +38,30 @@ exports.comprobarGET = function(cliente,seguro) {
         }
       });
 
-      db.query(querySeg, [seguro], (error, results) => {
+      db.query(querySeg, [seguro, cliente], (error, results) => {
          if (error) {
           console.error('Error al comprobar los datos de la reclamacion:', error);
           return reject(error);
         }
+        console.log(results.length);
         
-        if (results.length === 0) {
+
+        if (results.length == 0) {
           return reject({
             status: 400,
             message: 'El Seguro no está registrado'
           });
+        }else{
+          console.log(results[0].ID);
+          return resolve({
+          ok: true,
+          status: 200
+          });
         }
+       
       });
-
-      return resolve({
-        ok: true,
-        status: 200
-      });
-
+      
+      
     }
     catch(err)
     {
